; ModuleID = '/home/carl/AnghaBench/libgit2/tests/merge/trees/extr_trivial.c_test_merge_trees_trivial__5alt_2.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/merge/trees/extr_trivial.c_test_merge_trees_trivial__5alt_2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [15 x i8] c"trivial-5alt-2\00", align 1
@.str.1 = private unnamed_addr constant [22 x i8] c"trivial-5alt-2-branch\00", align 1
@.str.2 = private unnamed_addr constant [21 x i8] c"modified-to-same.txt\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_merge_trees_trivial__5alt_2() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = call i32 @merge_trivial(i32** %1, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0))
  %4 = call i32 @cl_git_pass(i32 %3)
  %5 = load i32*, i32** %1, align 8
  %6 = call i32* @git_index_get_bypath(i32* %5, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.2, i64 0, i64 0), i32 0)
  store i32* %6, i32** %2, align 8
  %7 = ptrtoint i32* %6 to i32
  %8 = call i32 @cl_assert(i32 %7)
  %9 = load i32*, i32** %1, align 8
  %10 = call i64 @git_index_reuc_entrycount(i32* %9)
  %11 = icmp eq i64 %10, 0
  %12 = zext i1 %11 to i32
  %13 = call i32 @cl_assert(i32 %12)
  %14 = load i32*, i32** %1, align 8
  %15 = call i64 @merge_trivial_conflict_entrycount(i32* %14)
  %16 = icmp eq i64 %15, 0
  %17 = zext i1 %16 to i32
  %18 = call i32 @cl_assert(i32 %17)
  %19 = load i32*, i32** %1, align 8
  %20 = call i32 @git_index_free(i32* %19)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @merge_trivial(i32**, i8*, i8*) #1

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i32* @git_index_get_bypath(i32*, i8*, i32) #1

declare dso_local i64 @git_index_reuc_entrycount(i32*) #1

declare dso_local i64 @merge_trivial_conflict_entrycount(i32*) #1

declare dso_local i32 @git_index_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
